--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <app-header></app-header>
   <div class="container">
     <app-root></app-root>
   </div>
+  <app-footer></app-footer>
 </body>
 </html>
